# eco_market

./: pyproject.toml
market/market/: settings.py  urls.py
market/orders/: admin.py  endpoints.py  models.py  serializers.py  urls.py
market/orders/migrations/: 0001_initial.py
market/products/: endpoints.py  models.py  serializers.py  urls.py
market/products/migrations/: 0001_initial.py
market/users/: models.py
market/users/migrations/: 0001_initial.py
